# SmartMirror

./: .gitignore  .markdownlint.yml  .yamllint.yml  AGENT_INSTRUCTIONS.md  BACKEND_SPEC.md  BUILD_PROMPT.md  CHANGELOG.md  DESIGN_SPEC.md  FRONTEND_SPEC.md  NEW_MACHINE.md  PHASES.md  README.md
.agent/: state.json
.github/workflows/: ci.yml
addons/mirror-gesture/: Dockerfile  config.yaml  pyproject.toml  requirements.txt  run.sh
addons/mirror-gesture/src/: camera.py  camera_pick.py  config.py  gestures.py  http_publisher.py  main.py  mqtt.py  privacy.py
docs/: architecture.md  deploy.md  frigate-go2rtc.md  gesture-demo.md  gesture-setup.md  gesture-smoke.md  install.md  mirror-daily-smoke.md  plex-hw-decode-verify.md  theme-authoring.md  tile-authoring.md  troubleshooting.md
frontend/: .env.example  .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
ha/: README.md  input_boolean.yaml  input_number.yaml  input_select.yaml  input_text.yaml  rest_command.yaml  sensor.yaml
installer/: README.md  bootstrap.sh  ha-dashboard.sh  ha-list-media.sh  ha-log.sh  ha-probe.sh  ha-reload.sh  install-gesture.sh  install.sh  mirror-restart.desktop  mirror-restart.sh  mirror-watchdog.sh  remote-deploy.sh  setup-ha-smb.sh  youtube-signin.sh
mockups/: 01-minimal-dark.html  02-bento-modern.html  03-ops-cyberpunk.html  04-editorial.html  05-glass.html  06-morning.html  07-noon-work.html  08-evening-relax.html  09-shopping-inventory.html  10-security-night.html  index.html
scripts/: set-mode-via-ssh.sh
tests/: e2e-smoke.sh
(+242 files in other folders)
