[project]
name = "mirror-gesture"
version = "0.2.0"
description = "Smart Mirror gesture service — kiosk-local MediaPipe + HTTP fan-out"
requires-python = ">=3.11"
dependencies = [
  "opencv-python==4.10.0.84",
  "mediapipe==0.10.18",
  "numpy<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "mirror_gesture" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
